# load("//plugs:unity.bzl", "unity_tests")
# load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
# 
# run_binary(
#     name = "unity-gen",
#     outs = ["unity-test-runner"],
#     tool = ":unity/auto/generate_test_runner.rb",
#     args = ["$(location linked-list.c)"]
# )

# unity_tests(
#     name = "linked-list",
#     test_file = "linked-list.c",
# )

genrule (
    name = "unity-runner",
    srcs = [":test-gen/generate_test_runner.rb", "linked-list-test.c"],
    outs = ["linked-list-test_Runner.c"],
    executable = False,
    cmd = "$(location :test-gen/generate_test_runner.rb) $(location :linked-list-test.c) $(location linked-list-test_Runner.c)",
)

cc_library (
    name = "unity",
    srcs = [":unity/unity.c"],
    hdrs = ["unity/unity.h", "unity/unity_internals.h"],
)

cc_library (
    name = "linked-list",
    srcs = glob(["linked-list/*.c"]),
    hdrs = glob(["linked-list/*.h"]),
)

cc_binary (
    name = "linked-list-test",
    srcs = ["linked-list-test.c", "linked-list-test_Runner.c"],
    includes = ["unity", "linked-list"],
    deps = [
        ":unity",
        ":linked-list",
    ]
)

# cc_binary(
#     name = "linked-list",
#     srcs = [
#         "linked-list-test.c",
#         "linked-list-test_Runner.c",
#         "//unity:unity",
#     ],
#     includes = [
#         "//unity:src"
#     ],
#     deps = [
#         "//unity:unity",
#     ]
# )
